# python-URLChecker

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.test.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
.github/workflows/disable/: ci.yaml
src/: constants.py  main.py
src/config/: constants.py  file_handler.py  validate.py
src/core/: url_checks.py
src/logs/: log_handler.py
src/notifications/: discord.py  send_notification.py
src/schema/: schema.yaml
tests/: test_file_handler.py  test_send_notification.py  test_url_checks.py  test_validate.py
tests/examples/: checks_bad.yaml  checks_good.yaml
